[gd_scene load_steps=2 format=3 uid="uid://c8vnncjwqcpab"]

[ext_resource type="Script" path="res://scenes/OptionsMenu/Audio/AudioOptionsMenu.gd" id="1"]

[node name="AudioOptionsMenu" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8
alignment = 1
script = ExtResource("1")

[node name="MuteControl" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="MuteLabel" type="Label" parent="MuteControl"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mute :"
horizontal_alignment = 1

[node name="MuteButton" type="CheckButton" parent="MuteControl"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2

[node name="AudioControlContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[connection signal="toggled" from="MuteControl/MuteButton" to="." method="_on_mute_button_toggled"]
